fix: clean up horizontal scroll at service section

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -35,6 +35,11 @@
 }
 
 @layer utilities {
+   @media screen and (max-height: 450px) {
+      .progress-bar-container {
+         @apply hidden
+      }
+   }
 
    @media screen and (max-width: 450px) {
       .edit-photo-badge {
